feat: add job description modal with file upload and application form
- Implement expandable job modal for Full Stack AI Developer position
- Add smooth animations with blur background effect (no darkening)
- Create enticing gradient file upload component with drag & drop
- Add form validation with disabled/enabled submit button states
- Include newsletter checkbox and privacy notice with dismissable styling
- Implement keyboard (ESC) and click-to-close functionality
- Follow established design system with glassmorphism and purple gradients
- Responsive design with mobile optimizations

--- a/hire-talent.html
+++ b/hire-talent.html
@@ -90,7 +90,7 @@
 
             <!-- About Us Card -->
             <div class="card card-tall">
-                <h3 class="title">About Us</h3>
+                <h3 class="title">About Us:</h3>
                 <div class="profile">
                     <img src="assets/profile-picture.png" alt="Vincent Lüders">
                     <div class="profile-info">
