fix: align contact buttons and quote element at same height from card bottom
- btn-group now uses margin-bottom: var(--spacing-md) for perfect alignment
- Ensures design system consistency across all cards

--- a/hire-talent.html
+++ b/hire-talent.html
@@ -75,7 +75,7 @@
                 <div class="body-text flex-1">
                     <ul class="list-bulleted">
                         <li>The fee of the placement is an agreed percentage of your candidate's salary.</li>
-                        <li><strong>That means:</strong> If you're not fully satisfied with any of the candidates you've interviewed and you don't decide to hire, our service is 100% free and without risk for you.</li>
+                        <li><strong>That means:</strong> If you're not fully satisfied with any of the candidates you've interviewed and you don't decide to hire, our service remains 100% free and without risk for you.</li>
                     </ul>
                     <br>
                     That's why we selectively choose our partners. Unfortunately, we cannot work with every company.
