--- a/opportunities.html
+++ b/opportunities.html
@@ -29,7 +29,7 @@
     <header class="header">
         <div class="header-left">
             <div class="logo">
-                <img src="assets/logo.png" alt="luxsearch logo">
+                <img src="assets/logo.png" alt="luxsearch® logo">
             </div>
             <div class="brand">
                 <span class="brand-name">luxsearch®</span>
